# BPSRLog

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  run.bat
bpsr/: __init__.py  __main__.py  logutil.py  utils.py
bpsr/config/: __init__.py
bpsr/discord/: __init__.py  websocket_client.py
bpsr/handler/: __init__.py  general.py  notify_handler.py  registry.py
bpsr/packet/: __init__.py  capture.py  capture_utils.py  game_packet.py  interface.py
bpsr/parser/: __init__.py  constants.py  message.py  parser.py
bpsr/proto/: AITable_pb2.py  AchievementDateTable_pb2.py  AchievementEntryTable_pb2.py  AchievementSeasonClassTable_pb2.py  AchievementTable_pb2.py  ActionSampleTable_pb2.py  ActionShowDataTable_pb2.py  ActionTable_pb2.py  ActivationTable_pb2.py  AffixPoolTable_pb2.py  AffixTable_pb2.py  AnimShortNameTable_pb2.py  AttrDescription_pb2.py  AudioShowDataTable_pb2.py  AwardAttrFixRatioTable_pb2.py  AwardTable_pb2.py  BDTAGLinkTable_pb2.py  BDTAGRootTable_pb2.py  BDTAGSpecialLinkTable_pb2.py  BackgroundTable_pb2.py  BasicAttrEffectTable_pb2.py  BasicAttrGrowTable_pb2.py  BasicAttrTable_pb2.py  BattlePassCardTable_pb2.py  BattlePassGlobalTable_pb2.py  BdTagTable_pb2.py  BeHitEffectTable_pb2.py  BodyPartsTable_pb2.py  BuffDataTable_pb2.py  BuffTable_pb2.py  BugReportConfigTable_pb2.py  BugReportFilterTable_pb2.py  BulletRunTable_pb2.py  BulletShapeTable_pb2.py  BulletTable_pb2.py  CGTable_pb2.py  CameraShowDataTable_pb2.py  CampRelationshipTable_pb2.py  ChallengeHeroDungeonTable_pb2.py  (+1456 more)
examples/: discord_server_example.py
